--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
         <div class="navbar">
           <div class="container nav-container">
-              <input class="checkbox" type="checkbox" name="" id="myCheckbox" onmouseenter="menuon()" onmouseleave="menuoff()"/>
+              <input class="checkbox" type="checkbox" name="" id="myCheckbox" onmousemove="menuon()" onmouseout="menuoff()"/>
               <div class="hamburger-lines">
                 <span class="line line1" id="l1"></span>
                 <span class="line line2" id="l2"></span>
