--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <script src="assets/script.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
 <body>
-    <div class="bg">
+    <div class="bg" >
     <nav>
-        <div class="navbar">
+        <div class="navbar" >
           <div class="container nav-container">
               <input class="checkbox" type="checkbox" name="" id="myCheckbox" onmousemove="menuon()" onmouseout="menuoff()"/>
               <div class="hamburger-lines">
@@ -36,8 +37,8 @@
             </h1>
             </div>
             <div class="menu-items">
-              <li><a href="#" onclick="turnoffmenu()">Home</a></li>
-              <li><a href="#" onclick="turnoffmenu()">about</a></li>
+              <li><a href="#def" onclick="turnoffmenu()">Home</a></li>
+              <li><a href="#tt7" onclick="turnoffmenu()">tt7</a></li>
               <li><a href="#" onclick="turnoffmenu()">blogs</a></li>
               <li><a href="#" onclick="turnoffmenu()">portfolio</a></li>
               <li><a href="#" onclick="turnoffmenu()">contact</a></li>
@@ -47,14 +48,19 @@
       </nav>
     </div>
 
-    <header>
+    <header id="def">
         <div class="headertext">
             <div class="headertitle">
                 <p>fafafafafa</p>
             </div>
             <div class="headerspace"></div>
             <div class="headermessage">
-                <p>ajkfafhajkhfjkahfjakhfkjahkfjhajkfakjfhakfhaj</p>
+                <p id="messagecenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+                    deserunt mollit anim id est laborum.</p>
             </div>
         </div>
         
@@ -62,7 +68,8 @@
 
 
 
-      <article>
+      <article id="tt7">
+        <div class="spacescroll"></div>
         <br>f
         <br>f
         <br>f
