--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         </div>
       </nav>
     </div>
-
-    <header id="def">
+    <div class="spacescroll" id="def" style="height: 10px;"></div>
+    <header>
+        
         <div class="headertext">
             <div class="headertitle">
                 <p>fafafafafa</p>
@@ -68,8 +69,8 @@
 
 
 
-      <article id="tt7">
-        <div class="spacescroll"></div>
+      <article >
+        <div class="spacescroll" id="tt7"></div>
         <br>f
         <br>f
         <br>f
