--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         
     </header>
 
-
+   <div class="road">
+    <div class="asphalt"></div>
+   </div>
 
       <article >
         <div class="spacescroll" id="tt7"></div>
