--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </header>
 
    <div class="road">
+    <img src="assets/img/car.png" alt="car">
     <div class="asphalt"></div>
    </div>
 
