--- a/index.html
+++ b/index.html
@@ -68,27 +68,21 @@
     </header>
 
    <div class="road">
-    <img src="assets/img/car.png" alt="car">
+    <img src="https://i.ibb.co/6FbVtrN/car.png" alt="car">
     <div class="asphalt"></div>
    </div>
 
       <article >
+        <div class="about">
+    dadadadada
+        </div>
         <div class="spacescroll" id="tt7"></div>
+        <div class="gall">
         <br>f
         <br>f
         <br>f
-        <br>f
-        <br>f
-        <br>f
-        <br>f
-        <br>f
-        <br>f
-        <br>f
-        <br>f<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br>f
-        <br>f
-        <br>f
-        
+
+      </div>
       </article>
 </body>
 </html>
