--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <!-- <meta http-equiv="refresh" content="3"> -->
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -13,6 +15,7 @@
     <meta name="robots" content="index">
     <title>Mateusz Tomaszek</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 </head>
 <script src="assets/script.js"></script>
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
@@ -38,10 +41,10 @@
             </div>
             <div class="menu-items">
               <li><a href="#def" onclick="turnoffmenu()">Home</a></li>
-              <li><a href="#tt7" onclick="turnoffmenu()">tt7</a></li>
-              <li><a href="#" onclick="turnoffmenu()">blogs</a></li>
-              <li><a href="#" onclick="turnoffmenu()">portfolio</a></li>
-              <li><a href="#" onclick="turnoffmenu()">contact</a></li>
+              <li><a href="#info" onclick="turnoffmenu()">Info</a></li>
+              <li><a href="#gallery" onclick="turnoffmenu()">Gallery</a></li>
+              <li><a href="#contact" onclick="turnoffmenu()">Contact</a></li>
+              <li><a href="https://oliwka.mateusz-tomaszek.pl/" onclick="turnoffmenu()">My Love</a></li>
             </div>
           </div>
         </div>
@@ -56,12 +59,14 @@
             </div>
             <div class="headerspace"></div>
             <div class="headermessage">
-                <p id="messagecenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                <p id="messagecenter">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                    deserunt mollit anim id est laborum.</p>
+                    deserunt mollit anim id est laborum.
+                  </p>
             </div>
         </div>
         
@@ -72,15 +77,58 @@
     <div class="asphalt"></div>
    </div>
 
-      <article >
+      <article id="info">
         <div class="about">
-    dadadadada
+          <div class="aboutdiv">
+            <div class="about1">
+              <h2><img src="assets/img/cam.png" alt="cam"></h2>
+              <p>Sony DSLR-A500</p>
+              <p>Sony DT f1.8/50mm SAM</p>
+              <p>Sony DT f3.5-5.6/18-55mm SAM II</p>
+              <p>Sigma f4-5.6/70-300mm</p>
+
+            </div>
+            <div class="about2">
+              <h2><img src="assets/img/av.png" alt="avatar"></h2>
+              <p>Photographer</p>
+              <p>Gliwice, PL</p>
+              <p>Dream Car: Corvette C8</p>
+              <p>My Car: BMW e87</p>
+            </div>
+          </div>
         </div>
-        <div class="spacescroll" id="tt7"></div>
+        
+        <div class="upgall" id="gallery">
+
+        </div>
         <div class="gall">
         <br>f
         <br>f
         <br>f
+        <br>f
+        <br>f
+        <br>f
+
+      </div>
+
+
+      <div class="upgall" id="contact"></div>
+      <div class="contactdiv">
+        <p>Contact / Social</p>
+        <div class="social-btns">
+          <a href="https://www.facebook.com/mateusz.tomaszek.21/" class="facebook">
+            <i class="fa fa-facebook"></i>
+          </a>
+          <a href="https://www.instagram.com/mateusz_tomaszek_" class="instagram">
+            <i class="fa fa-instagram"></i>
+          </a>
+          <a href="https://open.spotify.com/user/6n4qalak8dxcz9znnfdu379sh?si=29918840f03543c4" class="spotify">
+            <i class="fa fa-spotify"></i>
+          </a>
+          <a href="https://form.mateusz-tomaszek.pl/" class="mail">
+            <i class="fa fa-envelope-o"></i>
+          </a>
+        </div>
 
       </div>
       </article>
