--- a/index.html
+++ b/index.html
@@ -55,17 +55,15 @@
         
         <div class="headertext">
             <div class="headertitle">
-                <p>fafafafafa</p>
+                <p>Through the Lens</p>
             </div>
             <div class="headerspace"></div>
             <div class="headermessage">
                 <p id="messagecenter">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                    deserunt mollit anim id est laborum.
+                  Hello! I'm Mateusz, a photographer and automotive enthusiast. 
+                  Through the lens of my camera, I journey through the realm of automotive dreams, 
+                  capturing every detail, gleam, and emotion. 
+                  Join me in discovering the intricate relationship between light and automotive design. 
                   </p>
             </div>
         </div>
