--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </header>
 
    <div class="road">
-    <img src="https://i.ibb.co/6FbVtrN/car.png" alt="car">
+    <img src="assets/img/car.png" alt="car">
     <div class="asphalt"></div>
    </div>
 
@@ -100,12 +100,12 @@
 
         </div>
         <div class="gall">
-        <br>f
-        <br>f
-        <br>f
-        <br>f
-        <br>f
-        <br>f
+        <br>Miejsce pod zdjęcia
+        <br>.
+        <br>.
+        <br>.
+        <br>.
+        <br>.
 
       </div>
 
