--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="logo">
               <h1>
               <div class="wrapper">
-                <div class="typing-demo">
+                <div class="typing-demo" translate="no">
                   Mateusz Tomaszek
                 </div>
             </div>
@@ -78,7 +78,7 @@
       <article id="info">
         <div class="about">
           <div class="aboutdiv">
-            <div class="about1">
+            <div class="about1" translate="no">
               <h2><img src="assets/img/cam.png" alt="cam"></h2>
               <p>Sony DSLR-A500</p>
               <p>Sony DT f1.8/50mm SAM</p>
@@ -89,7 +89,7 @@
             <div class="about2">
               <h2><img src="assets/img/av.png" alt="avatar"></h2>
               <p>Photographer</p>
-              <p>Gliwice, PL</p>
+              <p translate="no">Gliwice, PL</p>
               <p>Dream Car: Corvette C8</p>
               <p>My Car: BMW e87</p>
             </div>
